--- a/styles/blocks/header.scss
+++ b/styles/blocks/header.scss
@@ -1,4 +1,5 @@
 .header {
+  width: 100%;
   padding: 40px 15px 50px;
   background: linear-gradient(92.7deg, #4CB8C4 0%, #3CD3AD 100%), #232323;
   display: flex;
