--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ img {
 }
 
 .header {
+  width: 100%;
   padding: 40px 15px 50px;
   background: linear-gradient(92.7deg, #4CB8C4 0%, #3CD3AD 100%), #232323;
   display: flex;
@@ -89,8 +90,72 @@ img {
   background: #f5313b;
 }
 
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  width: 360px;
+  padding: 30px;
+  background-color: #fff;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  box-shadow: 0 5px 20px rgba(27, 108, 114, 0.25);
+}
+.card::before {
+  content: "";
+  left: 10px;
+  bottom: -10px;
+  z-index: -1;
+  width: calc(100% - 20px);
+  height: 100%;
+  position: absolute;
+  background: #FFFFFF;
+  box-shadow: 0 5px 20px rgba(27, 108, 114, 0.25);
+  border-radius: 6px;
+}
+.card-city {
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 33px;
+  color: #000000;
+}
+.card-city span {
+  display: inline-block;
+  background: #E5464F;
+  border-radius: 6px;
+  padding: 3px 5px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1;
+  vertical-align: text-top;
+}
+.card-weather {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.card-value {
+  font-size: 92px;
+  line-height: 1;
+  color: #000;
+}
+.card-value sup {
+  font-size: 50%;
+}
+.card-description {
+  font-size: 20px;
+  line-height: 1.2;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: "Rubik", sans-serif;
+  row-gap: 50px;
 }
 
 /*# sourceMappingURL=main.css.map */
